<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Risk report</string>
    <string name="label_description">Description</string>
    <string name="label_pictures">Pictures</string>
    <string name="number_employees">Number of employees at risk: %num</string>
    <string name="number_users">Number of users at risk: %num</string>
    <string name="number_third">Number of third parties at risk: %num</string>
    <string name="possible_wound">Potential resulting injuries: %num</string>
    <string name="possible_sickness">Potential resulting diseases: %num</string>
    <string name="physical_hardness">Resulting physical hardness: %num</string>
    <string name="mental_hardness">Resulting Mental hardness: %num</string>
    <string name="risk_probability">Probability: %num</string>
    <string name="solution_simplicity">Fixing ease: %num</string>
    <string name="solution_cost">Fixing cost: %num</string>

    <string name="work_unit">Working unit</string>
    <string name="work_place">Location</string>
    <string name="risk_description">Risk description</string>
    <string name="risk_name">Risk name</string>

    <string name="display_risk_name">Risk name: %value</string>
    <string name="display_work_unit">Working unit: %value</string>
    <string name="display_work_place">Location: %value</string>
    <string name="display_risk_description">Risk description: %value</string>

    <string name="picture_taken">Picture saved</string>
    <string name="report_sent">Report sent</string>
    <string name="report_sending_chooser">Send the report</string>
    <string name="report_subject">Risk report</string>
    <string name="empty_value">(Empty)</string>
    <string name="new_report">Create a new report</string>


    <string name="cat_description">Description</string>
    <string name="cat_targets">Targets</string>
    <string name="cat_risks">Risks</string>
    <string name="cat_fix">Fix</string>

    <string name="delete_report">Delete</string>
    <string name="toast_report_deleted">Report(s) deleted</string>
    <string name="menu_createreport">New report</string>
    <string name="reportlist_empty">Click on %image to create a new report</string>
    <string name="select_all">Select all</string>
    <string name="items_selected">%nb items selected</string>
    <string name="reports_selected">%nb report(s) selected</string>
    <string name="pictures_selected">%nb picture(s) selected</string>
    <string name="add_picture">Add a picture</string>
    <string name="toast_image_deleted">Picture(s) deleted</string>
    <string name="picturelist_empty">Click on %image to take a picture</string>

    <string name="send_report">Send</string>
    <string name="no_title">No title</string>
    <string name="undefined">Undefined</string>
    <string name="nullrisk">Null</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="veryhigh">Very high</string>

    <string name="creating_report">Compressing the repport</string>
    <string name="creating_reports">Compressing the reports</string>

</resources>
